--- a/css/common.css
+++ b/css/common.css
@@ -173,90 +173,20 @@ button:focus, a:focus, img:focus {outline:none;}
 
 .form-control:hover, .form-control:focus{outline: none!important; box-shadow:none; border:none}
 
+.btn-link{padding: 0;}
 
-/*checkbox start*/
-	/*label {margin:0;}
-	.form-check-label{display: flex; width: 100%; justify-content: space-between;}
-	input[type=checkbox], input[type=radio] {display: none;}
-	input[type=checkbox] + label:after {content: ""; display: block; width: 20px; height: 20px; background: #fff; border: 3px solid #fff; box-shadow: 0px 0px 0px 1px #FA6528; transition: color ease .3s;}
-	input[type=radio] + label:after{content: "";display: block; border: 3px solid #fff; box-shadow: 0px 0px 0px 1px #FA6528; border-radius: 50%; background: #fff; height: 20px; width: 20px; transition: color ease .3s;}
-	input[type=checkbox]:checked + label:after {background: linear-gradient(93.81deg, #FA6528 0%, #F4851E 100%);}
-	input[type=radio]:checked + label:after {background: linear-gradient(93.81deg, #FA6528 0%, #F4851E 100%);}*/
-/*checkbox end*/
-
-/* owl-carousel start*/
-	/*.owl-carousel {position:relative;}
-	.owl-stage {display:flex; -webkit-align-items:center; align-items:center;}
-	.owl-stage:after {width:1px; content:""; position:absolute; top:0; left:0; height:100%; background-color:white;}
-
-	.owl-nav {position:absolute; top:50%; left:0; width:100%; font-size:0; text-align:right; transform: translateY(-50%);}
-	.owl-prev, .owl-next {width:21px; height:34px; padding:0; font-size:0; cursor:pointer; display:inline-block; -webkit-transition:all 0.3s ease; -moz-transition:all 0.3s ease; -o-transition:all 0.3s ease; transition:all 0.3s ease; border:0; position:absolute; z-index:300; background: transparent; text-align: right; top: 50%; transform: translateY(-50%);}
-
-	.owl-clients .owl-prev {background:url(../i/arr_left-white.png) no-repeat 50% 50%!important; left:-58px; display: block; width: 21px; height: 34px;}
-	.owl-clients .owl-next {background:url(../i/arr_right-white.png) no-repeat 50% 50%!important; right:-58px; display: block; width: 21px; height: 34px;}
-
-	.owl-next:not(.disabled):hover, .arrow-next:not(.disabled):hover {}
-	.owl-prev:not(.disabled):hover, .arrow-prev:not(.disabled):hover {}
-
-	.owl-dots {display:inline-block; width:100%; text-align:center; position:absolute; left:0; bottom:-65px;}
-		.owl-dots .owl-dot {}
-			.owl-dots .owl-dot span {background: #d2d5d5; border:none; width:25px; height:25px; border-radius:50%; -moz-border-radius:50%; -webkit-border-radius:50%; cursor:pointer; margin:0; -webkit-transition:all 0.3s ease; -moz-transition:all 0.3s ease; -o-transition:all 0.3s ease; transition:all 0.3s ease; display: block;}
-			.owl-dots .owl-dot+.owl-dot span {margin-left:15px;}
-			.owl-dots .owl-dot.active span, .owl-dots .owl-dot:hover span {background: #1f5ca6;}*/
-/* owl-carousel end*/
-
-/*flickity start*/
-	/*.flickity-button{ width: 44px; height: 100%; background: transparent;}
-	.flickity-button:hover{background: transparent;}
-	.flickity-prev-next-button{}
-		.flickity-prev-next-button.previous{border-radius: 0;}
-	.flickity-prev-next-button{}
-		.flickity-prev-next-button.next{border-radius: 0;}
-	.carousel-container {display: flex; align-items: center;}
-	.carousel-main {flex-grow: 1;}
-	.detail__photo__item.carousel-cell {width: 100%; height: 393px; display: flex; align-items: center; justify-content: center;}
-	.carousel-nav {width: 68px; max-height: 345px; overflow: hidden;}
-	.addon__photo__item.carousel-cell {height: 68px; width: 68px; cursor: pointer; margin-bottom: 19px;}
-	.product_detail_photo .flickity-page-dots{display: none}
-	.product_detail_photo .flickity-prev-next-button .flickity-button-icon{display: none;}*/
-/*flickity end*/
-/*slick*/
-.slick-dotted.slick-slider{margin-bottom: 0;}
-.slick-arrow{background: #FFB800; width: 60px; height: 60px; border-radius: 50%; z-index: 3; display: flex; align-items: center; justify-content: center;}
-	.slick-prev:before{content: ''; background: url(../i/arrow-left.svg)no-repeat center center; width: 24px; height: 24px; display: block;}
-	.slick-next:before{content: ''; background: url(../i/arrow-right.svg)no-repeat center center; width: 24px; height: 24px; display: block;}
-.slick-prev:hover, .slick-prev:focus, .slick-next:hover, .slick-next:focus{background: #e1e3e6; }
-.slick-dots{text-align: left;bottom: 0px;}
-.slick-dots li{margin: 0 12px;}
-.slick-dots li:first-child{margin-left: 0;}
-.slick-dots li button{padding: 0;}
-.slick-dots li button:before{content: ''; background: #D0D4D8; width: 6px; height: 6px; display: inline-block; border-radius: 50%; top: 50%; left: 50%; transform: translate(-50%, -50%);opacity: 1;}
-.slick-dots li.slick-active button:before{content: ''; border: 2px solid #FFB800; background: #fff; width: 14px; height: 14px; display: inline-block; border-radius: 50%;opacity: 1;}
+.btn-link:hover,.btn-link:focus:hover, .btn-link.focus:hover, .btn-link:not(:disabled):not(.disabled):active, .btn-link:not(:disabled):not(.disabled):active:focus, .btn-link:not(:disabled):not(.disabled).active:focus{text-decoration: none;}
 
 
-/*breadcrumb start*/
-	/*.breadcrumb{background-color:transparent;padding: 0; margin-bottom: 8px; align-items: center; padding: 0;}
-	.breadcrumb-item a{color: #000;font-size: 14px;text-decoration: none;}
-	.breadcrumb-item.active{color: #1f5ca6;text-decoration: underline;}
-	.breadcrumb-item+.breadcrumb-item::before{content: '\2192'; color: #000; vertical-align: middle;}*/
-/*breadcrumb end*/
-
-/*form start*/
-	/*.section_form{}
-		.section_form_wrap{}
-			.section_form_title{}
-		.form-control{background-color: #ffffff;border: 1px solid #cccaca;padding: 13px 19px; color: #404040; font-weight: 300; border-radius: 5px; }
-		input.form-control{border: 1px solid #1f5ca6;color: #1f5ca6;height: 50px; margin-bottom: 18px;}
-		textarea.form-control{border: 1px solid #1f5ca6;color: #1f5ca6; height: 120px;}
-		.form-control:focus{box-shadow: none!important;border: 1px solid #cccaca;}
-		.form-control::placeholder{color: #1f5ca6; font-weight: 600;}
-
-		.form_row{justify-content: space-between;}
-		.form_bottom{margin-top: 30px; text-align: center;}*/
-/*form end*/
 
 
-.header{padding-top: 26px; padding-bottom: 24px;}
+
+
+
+
+
+
+.header{padding-top: 26px; padding-bottom: 24px; box-shadow: 0px 9px 16.5px rgba(99,182,48,0.06);}
 	.header_row{align-items: center;}
 		.header_logo{}
 			.logo{}
@@ -387,7 +317,7 @@ button:focus, a:focus, img:focus {outline:none;}
 	.order_info{}
 		.order_item{background-color: #fcfcfc;border-radius: 15px; max-width: 990px; padding: 47px 68px;border-radius: 15px;margin-left: 20px; margin-bottom: 16px;}
 		.order_item_title{color: #3c3c3c; border-bottom:1px solid #3c3c3c; padding-bottom: 22px;}
-		.order_item_info{margin-top: 34px;}
+		.order_item_info{margin-bottom: 34px;}
 		.order_info_row{}
 		.order_info_title{color: #5a5a5a; margin-bottom: 16px;}
 		.order_info_text{color: #3c3c3c;}
@@ -398,7 +328,7 @@ button:focus, a:focus, img:focus {outline:none;}
 	.order_item_list{}
 		.order_item_row.header_row{color: #5a5a5a;	padding-top: 30px; padding-bottom: 26px;}
 		.order_item_row{padding-top: 20px; padding-bottom: 20px;color: #3c3c3c;}
-.card_list {padding-top: 48px;}
+.card_list {}
 	.card_list_row{margin-bottom: 58px;}
 		.card_item{position: relative; padding-left: 75px; height: 35px; display: flex;align-items: center;}
 		.card_item:before{content:''; background: url(../i/credit-card.svg) no-repeat; width: 50px;height: 40px;position: absolute; top:0; left:0; background-size: contain;}
@@ -412,19 +342,78 @@ button:focus, a:focus, img:focus {outline:none;}
 		.person_info{}
 		.person_info_title{color: #3c3c3c; border-bottom:1px solid #3c3c3c; padding-bottom: 22px;}
 		.person_info_wrap{margin-top: 34px;}
-		.person_info_row{}
-		/* .person_info_title{color: #5a5a5a; margin-bottom: 16px;} */
-		/* .order_info_text{color: #3c3c3c;}
-			.-red{color: #b63030;}
-			.-green{color: #63b630;} */
-		/* .order_item_row:nth-child(even){background-color: rgba(60, 60, 60, .05);} */
-/* 
-	.order_item_list{}
-		.order_item_row.header_row{color: #5a5a5a;	padding-top: 30px; padding-bottom: 26px;}
-		.order_item_row{padding-top: 20px; padding-bottom: 20px;color: #3c3c3c;} */
+		.person_info_row{display: flex; flex-wrap: wrap;}
+		.person_info_col:first-child{width: 184px;}
+		.person_info_col{line-height: 2;}
+		.person_info_bottom{margin-top: 47px;}
+		.person_info_bottom .btn-link{display: block; text-align-last: left;}
 
-/* 	
-		.order_info_bottom{} */
+.docs_list{color: #63b630; list-style-type: none; padding: 0;}
+	.docs_list_item{position: relative; padding-left: 36px; margin-bottom: 18px;}
+	.docs_list_item:before{content:''; background: url(../i/document.svg) no-repeat center; width: 16px; height: 20px; position: absolute; top:0; left:0; background-size: contain;}
+		.docs_list_link{color: #63b630; text-decoration: underline;}
+	
+.section_form{padding-top: 118px;}
+	.form_info_title{max-width: 320px;}
+		.form_info_title span{display: block;}
+	.form_info_subtitle{margin-top: 30px;color: #757575;}
+		.form_info_subtitle p+p{margin-top: 16px;}
+	.form_info_progress{margin-top: 136px; }
+		.form_info_progress_text{color: #757575; display: none;;}
+		.form_info_progress_text.active{display: block;}
+			.form_info_progress_text .step{}
+		.form_info_progress_control{margin-top: 30px;display: block; width: 360px; height: 6px; background: #ececec; position: relative; }
+		.form_info_progress_control.-step1:before{content:''; width: 73px; height: 6px;background-color: #63b630; position: absolute; top:0; left: 0; display: block;}
+		.form_info_progress_control.-step2:before{content:''; width: 152px; height: 6px;background-color: #63b630; position: absolute; top:0; left: 0; display: block;}
+		.form_info_progress_control.-step3:before{content:''; width: 221px; height: 6px;background-color: #63b630; position: absolute; top:0; left: 0; display: block;}
+		.form_info_progress_control.-step4:before{content:''; width: 292px; height: 6px;background-color: #63b630; position: absolute; top:0; left: 0; display: block;}
+		.form_info_progress_control.-step5:before{content:''; width: 100%; height: 6px;background-color: #63b630; position: absolute; top:0; left: 0; display: block;}
+.regform{max-width: 519px; margin-right: 0; margin-left: auto;}
+.form_group + .form_group {margin-top: 30px;}
+		.form-control{background-color: #fbfbfb; border: none;padding: 13px 27px; color: #404040; border-radius:7px; }
+		input.form-control{border: none;color: #000000; height: 62px; }
+		textarea.form-control{border: none;color: #000000; height: 120px;}
+		.form-control:focus{box-shadow: none!important; border: none;background-color: #fbfbfb;}
+		.form_row{justify-content: space-between;}
+		.form_bottom{margin-top: 30px; text-align: center;}
+		.input_box{position: relative; margin-bottom: 14px;}
+		.form_group-title{margin-bottom: 18px;}
+			.input_name{color: #8c8c8c; position: absolute; top:50%; left:26px; font-size:18px; transform: translateY(-50%);}
+			.form-control:focus+.input_name{display: block; color: #a8a8a8; top:13px; left:26px;font-size: 14px }
+			.input_name.-top{display: block; color: #a8a8a8; top:13px; left:26px; font-size: 14px}
+.-error .form-control { background: url(../i/error.svg) #fae8e8 no-repeat 90%;}
+.-ok .form-control { background: url(../i/ok.svg) #fbfbfb no-repeat 90%; }
+.error_text{color: #e15050;font-size: 14px; font-family: "Gilroy-Medium";}
+.form_radio_btn{display: inline-block;}
+.form_radio_btn input[type=radio] {display: none;}
+.form_radio_btn label {cursor: pointer;background-color: #f6f6f6; color: #8c8c8c;padding: 0px 15px;user-select: none; height: 62px; width: 175px; display: flex; justify-content: center; align-items: center;border-radius: 7px;}
+.form_radio_btn input[type=radio]:checked + label {background-color: #63b630; color: #fff;}
+.form_radio_btn label:hover {color: #fff;background-color: #63b630; }
+.form_radio_btn input[type=radio]:disabled + label {background-color: #f6f6f6;color: #8c8c8c;}
+.input_box + .input_box{margin-left: 11px;}
+.step_box{ }
+
+.step_box_btn{display: flex; justify-content: space-between; align-items: center;border-top: 1px solid #f6f6f6; margin-top: 43px; padding-top: 34px;}
+input#birth_date{width: 170px; margin-right: 11px;}
+input#birthplace{width: 327px;}
+#street, #reg-street {width: 300px;}
+#house, #reg-house{width: 96px;}
+#flat, #reg-flat{width: 100px;}
+
+.regform .form-control{width: 250px;}
+.regform .-fullwidth .form-control{width: 100%;}
+
+.check{position: relative; margin-bottom: 24px;}
+.check_box{display: flex; width: 100%; justify-content: space-between;}
+input[type="checkbox"]{display: none; position: absolute; top: 0;left: 0;}
+input[type="checkbox"] + label:before {content: ""; display: flex; justify-content: center; align-items: center; width: 30px; height: 30px; background: #f6f6f6; border: 3px solid #f6f6f6; transition: color ease .3s; border-radius:5px; margin-right: 14px;}
+input[type="checkbox"]:checked + label:before {content:"\2714";}
+.form_file_item + .form_file_item{margin-top: 37px;}
+.form_file_item p{margin-bottom: 17px;}
+.input_file{width:0;height:0;opacity:0;overflow:hidden;position:absolute;z-index:-1}
+.input_file + .js-labelFile{overflow:hidden;text-overflow:ellipsis;white-space:nowrap;cursor:pointer}
+.input_file + .js-labelFile .icon:before{content:"\f093"}
+.input_file + .js-labelFile.has-file .icon:before{content:"\f00c";color:#5AAC7B}
 
 
 
@@ -440,6 +429,9 @@ button:focus, a:focus, img:focus {outline:none;}
 	.repay_item_text {max-width: 100%;}
 	.footer_contacts{padding-left: 16px;}
 	.footer_nav {padding-left: 40px;}
+	.person_info_box{margin-left: 0;}
+
+
 	
 }
 @media (max-width: 992px){
@@ -476,6 +468,13 @@ button:focus, a:focus, img:focus {outline:none;}
 	.footer_menu_nav {justify-content: space-between; width: 100%;}
 	.footer_contacts{padding-left: 24px;}
 	.footer{padding-top: 60px;}
+	.section_lk_navbar .nav-link{padding: 16px 12px;}
+	.lk_menu{margin-left: 0; margin-right: 0;}
+	.person_info_wrap {font-size: 15px;}
+	.person_info_box{padding: 44px;}
+	.form_info_title{max-width: 100%;}
+	.form_info_progress{margin-top: 60px;}
+	.regform{margin:60px auto 0 0}
 
 }
 @media (max-width: 768px){
@@ -499,6 +498,9 @@ button:focus, a:focus, img:focus {outline:none;}
 	.footer-col-nav{min-height: 38px;}
 	.footer_contacts{padding-left: 55px;}
 	.footer_menu_nav{text-align: center; padding: 14px 0;}
+	.card_item{margin-bottom: 20px;}
+	.lk_menu .nav-item{width: 100%;}
+	.lk_menu .nav-link{display: block;}
 
 }
 @media (max-width: 576px){
@@ -528,4 +530,21 @@ button:focus, a:focus, img:focus {outline:none;}
 	.footer_text {text-align: center;display: block;}
 	.footer_contacts{text-align: center;}
 	.copyright{text-align: center;}
+	h1, .h1{font-size: 26px;}
+	h2, .h2{font-size: 24px;}
+	h3, .h3{font-size: 20px;}
+	.person_info_box{padding: 34px 16px;}
+	.order_item_info{margin-bottom: 20px;}
+	.order_info_title{margin-bottom: 6px;}
+	.order_item_row.header_row{padding-top: 0;}
+	.card_list_row {padding-bottom: 28px;}
+	.section_form{padding-top: 60px;}
+	.form_info_progress_control{width: 100%;}
+	.regform{max-width: 100%;}
+	.regform input.form-control{width: 100%!important;}
+	.regform .form_row{display: block; width: 100%;}
+	label{width: 100%;}
+	.input_box + .input_box{margin-left: 0;}
+	.form_radio_btn label{height: 40px;}
+	
 }
